examples/test/testpolicy13959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13959
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key33: value17
      key7: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value34
      podSelector:
        matchLabels:
          key29: value19
          key35: value44
          key21: value38
